fix disable scroll on mobile devices

--- a/src/components/DefaultModalContent/style.scss
+++ b/src/components/DefaultModalContent/style.scss
@@ -6,6 +6,7 @@
   justify-content: space-around;
   align-items: center;
   color: #282c34;
+  overflow: auto;
 
   .title {
     font-size: 30px;
